--- a/RepasoApp/RepasoApp.csproj
+++ b/RepasoApp/RepasoApp.csproj
@@ -27,5 +27,6 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Newtonsoft.Json" />
     </ItemGroup>
 </Project>
